fix title z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@
   width: 730px;
   align-self: center;
   margin-left: 64px;
+  z-index: 2;
 }
 
 .header__link{
@@ -76,6 +77,7 @@
   position: absolute;
   left: 64px;
   bottom: 30px;
+  z-index: 2;
 }
 
 .header__title_font_size{
